# solana-program-sample

./: .gitignore  Cargo.toml  README.md  Xargo.toml  package.json  tsconfig.json  wallet.json.sample
client/: invoke.ts
src/: entrypoint.rs
test/: invoke.ts
